<resources>
    <string name="app_name">calculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mnozenie">*</string>
    <string name="dzielenie">/</string>
    <string name="result"></string>
    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
