<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"

        android:text="@string/result" />

    <Button
        android:id="@+id/plus"
        android:layout_width="64dp"
        android:layout_height="39dp"
        android:onClick="onClickPlus"
        android:text="@string/plus"
        android:layout_above="@id/result"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/result"
         />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:entries="@array/numbers"
        android:layout_above="@id/mnoz"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/result"
        />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:entries="@array/numbers"
        android:layout_above="@id/mnoz"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignRight="@id/result" />

    <Button
        android:id="@+id/minus"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_above="@id/result"
        android:onClick="onClickMinus"
        android:layout_alignRight="@id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-1dp"
        android:text="@string/minus" />

    <Button
        android:id="@+id/mnoz"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:text="@string/mnozenie"
        android:onClick="onClickMnoz"
        android:layout_above="@id/plus"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/result"
         />

    <Button
        android:id="@+id/dziel"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_above="@id/minus"
        android:onClick="onClickDziel"
        android:layout_alignRight="@id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="3dp"
        android:text="@string/dzielenie" />

</RelativeLayout>